# ReportFlow

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  cliff.toml  commitlint.config.js  pyproject.toml
.github/workflows/: ci.yml  release.yml
packaging/: build_all.py  make_logo.py
packaging/innosetup/: reportflow.iss
packaging/nssm/: README.md
packaging/pyinstaller/: service.spec  ui.spec  worker.spec
scripts/: dev_run_worker.py  dev_smtp_server.py  make_sample.py  set-service-account.ps1
scripts/sample/: template.xlsx
src/reportflow/: __about__.py  __init__.py
src/reportflow/core/: __init__.py  logging_setup.py  maintenance.py  paths.py  secrets.py
src/reportflow/core/config/: __init__.py  defaults.py  loader.py  models.py
src/reportflow/core/email/: __init__.py  redaction.py  render.py  sender.py
src/reportflow/core/ipc/: __init__.py  contract.py  result_io.py
src/reportflow/core/state/: __init__.py  models.py  run_store.py
src/reportflow/service/: __init__.py  __main__.py  bootstrap.py  launcher.py  scheduler.py  service_account.py  workbook.py
src/reportflow/ui/: __init__.py  __main__.py  api_client.py  assets.py  fs_util.py  log_format.py  schedule_compile.py  style.py  transfer.py  updater.py
src/reportflow/worker/: __init__.py  __main__.py  cleanup.py  excel.py  runner.py
tests/: conftest.py
tests/core/: test_config.py  test_email.py  test_ipc.py  test_maintenance.py  test_paths.py  test_run_store.py  test_secrets.py
tests/service/: fake_worker.py  test_api.py  test_launcher.py  test_service_account.py  test_service_excel.py
tests/ui/: conftest.py  test_api_client.py  test_fs_util.py  test_log_format.py  test_schedule_compile.py  test_transfer.py  test_ui.py  test_updater.py
tests/worker/: test_cleanup.py  test_error_scan.py  test_pdf_paths.py  test_worker_excel.py
(+13 files in other folders)
