[project]
name = "reportflow"
version = "0.2.1"
description = "Windows desktop automation for Excel-based reporting (UI + Service + Excel Worker)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "ReportFlow" }]
dependencies = [
    "pydantic>=2",
    "loguru",
    "keyring",
    "tomli-w",
    "jinja2",
    "email-validator",
]

[project.optional-dependencies]
service = [
    "fastapi",
    "uvicorn[standard]",
    "apscheduler>=3.10",
    "httpx",
    "openpyxl",
    "pywin32",
]
ui = [
    "PySide6",
    "httpx",
    "pywin32",
]
worker = [
    "xlwings",
    "pywin32",
    "pypdf",
    "psutil",
]
dev = [
    "pytest",
    "pytest-qt",
    "ruff",
    "mypy",
    "pyinstaller",
    "aiosmtpd",
    "psutil",
]

[project.scripts]
reportflow-worker = "reportflow.worker.__main__:main"
reportflow-service = "reportflow.service.__main__:main"

[project.gui-scripts]
reportflow-ui = "reportflow.ui.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reportflow"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.11"
packages = ["reportflow"]
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Only collect classes ending in "Tests"; keeps pytest from trying to collect domain
# models like TestSettings as test classes.
python_classes = ["*Tests"]
markers = [
    "excel: tests that require a real local Excel install (skipped in CI)",
]

[dependency-groups]
dev = [
    "pillow>=12.3.0",
]
